Fix issue where canvas was below window (z-index was -1)

--- a/app/css/ui.css
+++ b/app/css/ui.css
@@ -125,7 +125,7 @@ fieldset.fieldset .slider {
 
 /* to show the canvas bounds */
 canvas {
-  z-index: -1;
+  z-index: 1;
   position: absolute;
   background: #efe;
   border: none;
